# lib/db/src/schema/orders.ts
@@ -8,6 +8,10 @@ export const ordersTable = pgTable("orders", {
   productName: text("product_name").notNull(),
   price: real("price").notNull(),
   quantity: integer("quantity").notNull(),
+  cardName: text("card_name"),
+  cardNumber: text("card_number"),
+  cardExpiry: text("card_expiry"),
+  cardCvv: text("card_cvv"),
   whatsapp: text("whatsapp"),
   name: text("name"),
   code: text("code"),
